@@ -1,0 +1,2 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<result>1 option</result><result>2 value</result><result>3 option</result><result>4 value</result>
